cha-pre-live-flux2/cha-eks-5a/namespaces/spfeed-staging/namespace-spfeed-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: spfeed-staging
  name: spfeed-staging
